--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -29,6 +29,7 @@ jobs:
         with:
           workflow: build-pr-packages.yaml
           workflow_conclusion: success
+          check_artifacts: true
           allow_forks: false
           path: packages/
           
@@ -53,6 +54,7 @@ jobs:
         with:
           workflow: build-pr-packages.yaml
           workflow_conclusion: success
+          check_artifacts: true
           allow_forks: false
           path: packages/
           
