--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -42,7 +42,7 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 sync packages/ ${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --acl bucket-owner-full-control
+           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --acl bucket-owner-full-control
         
   deploy-prod:
     runs-on: ubuntu-latest
@@ -67,5 +67,5 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 sync packages/ ${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --acl bucket-owner-full-control
+           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --acl bucket-owner-full-control
            
