--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -197,5 +197,5 @@ jobs:
         uses: dell/common-github-actions/malware-scanner@main
         with:
           directories: .
-          options: -ri
+          options: -r
           
