--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -8,6 +8,7 @@ on:
     inputs:
       package_name:
         description: 'Filename of package to promote'
+        default: '-'
         required: false
         type: string
 
@@ -42,7 +43,7 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 cp packages/ s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control--acl bucket-owner-full-control
+           aws s3 cp packages/ s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control--acl bucket-owner-full-control
         
   deploy-prod:
     runs-on: ubuntu-latest
@@ -67,5 +68,5 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
+           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
            
