--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -43,7 +43,7 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 cp packages/ s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
+           aws s3 cp packages/ s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/ --recursive --exclude "*/*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
   deploy-prod:
     runs-on: ubuntu-latest
     environment: production
@@ -67,5 +67,5 @@ jobs:
            
       - name: Sync to S3
         run: |
-           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --recursive --exclude "*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
+           aws s3 sync packages/ s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/ --recursive --exclude "*/*" --include "${{ inputs.package_name }}.*" --include *.json --include *.xz --include *.SHA256SUMS --acl bucket-owner-full-control
            
