--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -46,7 +46,7 @@ jobs:
           PATH: packages/
         run: |
           # Flatten folder structure due to unzipping files
-          find $PATH -type f | while read file; do
+          find ${{ env.PATH }} -type f | while read file; do
             filename=$(basename "$file")
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
             UPLOADED_FILES="$UPLOADED_FILES$filename,"
@@ -57,6 +57,7 @@ jobs:
           echo "uploaded_files=$UPLOADED_FILES" >> "$GITHUB_OUTPUT"
            
   deploy-prod:
+    name: Deploying to prod S3 bucket
     runs-on: ubuntu-latest
     environment: production
     needs: [deploy-dev]
