--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -38,14 +38,14 @@ jobs:
            aws-region           :  ${{ secrets.AWS_CREDS_REGION_NAME }}
            
       - name: Copy to S3
-        id: dev-s3-filelist
+        id: dev-upload
         run: |
           find ${{ env.PACKAGE_PATH }} -type f | while read file; do
             filename=$(basename "$file")
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
             UPLOADED_FILES="$UPLOADED_FILES$filename,"
           done
-          echo "uploaded_files=$UPLOADED_FILES" >> "$GITHUB_OUTPUT"
+          echo "uploaded_files=${UPLOADED_FILES}" >> $GITHUB_OUTPUT
 
   create-o3de-3p-pr:
     name: Create PR in O3DE to update version
@@ -54,6 +54,7 @@ jobs:
     env:
       O3DE_REPO_PATH: o3de
       DEV_CDN: https://d1gg6ket0m44ly.cloudfront.net
+      UPLOADED_FILES: "${{ needs.deploy-dev.steps.dev-upload.outputs.uploaded_files }}"
 
     steps:
     - name: Checkout o3de repository
@@ -65,7 +66,6 @@ jobs:
 
     - name: Copy dev package from S3
       run: |
-        UPLOADED_FILES="${{ needs.deploy-dev.outputs.uploaded_files }}"
         IFS=',' read -ra FILES <<< "$UPLOADED_FILES"
         for filename in "${FILES[@]}"; do
             if [[ $filename == *.tar.xz.SHA256SUMS ]]; then
@@ -76,7 +76,6 @@ jobs:
     - name: Update BuiltInPackages with new SHA256 and version
 
       run: |
-        UPLOADED_FILES="${{ needs.deploy-dev.outputs.uploaded_files }}"
         IFS=',' read -ra FILENAMES <<<"$UPLOADED_FILES"
         for filename in "${FILENAMES[@]}"; do
           if [[ $filename == *.tar.xz.SHA256SUMS ]]; then
@@ -128,9 +127,11 @@ jobs:
            
   deploy-prod:
     name: Deploying to prod S3 bucket
+    needs: [deploy-dev, create-o3de-3p-pr]
     runs-on: ubuntu-latest
     environment: production
-    needs: [deploy-dev, create-o3de-3p-pr]
+    env:
+      UPLOADED_FILES: "${{ needs.deploy-dev.steps.dev-upload.outputs.uploaded_files }}"
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -141,7 +142,6 @@ jobs:
            
       - name: Promote dev package to prod
         run: |
-          UPLOADED_FILES="${{ needs.deploy-dev.outputs.uploaded_files }}"
           IFS=',' read -ra FILES <<< "$UPLOADED_FILES"
           for filename in "${FILES[@]}"; do
               echo aws s3 cp --dryrun "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" "s3://${{ secrets.AWS_PACKAGE_PROD_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
