--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -43,7 +43,7 @@ jobs:
           find ${{ env.PACKAGE_PATH }} -type f | while read file; do
             filename=$(basename "$file")
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
-            UPLOADED_FILES="$UPLOADED_FILES$filename,"
+            UPLOADED_FILES="${UPLOADED_FILES}${filename},"
           done
           echo "uploaded_files=$( echo "$UPLOADED_FILES" )" >> $GITHUB_OUTPUT
 
