--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -20,6 +20,8 @@ jobs:
     environment: development
     env:
       PACKAGE_PATH: packages/
+    outputs:
+      uploaded_files: "${{ steps.dev-upload.outputs.uploaded_files }}"
     steps:          
       - name: Download packages
         uses: dawidd6/action-download-artifact@v2.28.0
@@ -44,9 +46,8 @@ jobs:
             filename=$(basename "$file")
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
             UPLOADED_FILES="$UPLOADED_FILES$filename,"
-            echo $UPLOADED_FILES
           done
-          echo "uploaded_files=$( echo "$UPLOADED_FILES" )" >> $GITHUB_OUTPUT
+          echo "uploaded_files=$UPLOADED_FILES" >> $GITHUB_OUTPUT
 
   create-o3de-3p-pr:
     name: Create PR in O3DE to update version
