--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -47,7 +47,7 @@ jobs:
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
             UPLOADED_FILES="$UPLOADED_FILES$filename,"
           done
-          echo "uploaded_files=$UPLOADED_FILES" >> $GITHUB_OUTPUT
+          echo "uploaded_files=$( echo "UPLOADED_FILES")" >> $GITHUB_OUTPUT
 
   create-o3de-3p-pr:
     name: Create PR in O3DE to update version
