--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -21,7 +21,7 @@ jobs:
     env:
       PACKAGE_PATH: packages/
     outputs:
-      uploaded_files: "${{ steps.dev-upload.outputs.uploaded_files }}"
+      uploaded_files: "${{ steps.dev-upload.outputs.filelist }}"
     steps:          
       - name: Download packages
         uses: dawidd6/action-download-artifact@v2.28.0
@@ -47,7 +47,7 @@ jobs:
             aws s3 cp "$file" "s3://${{ secrets.AWS_PACKAGE_DEV_S3_BUCKET }}/$filename" --acl bucket-owner-full-control
             UPLOADED_FILES="$UPLOADED_FILES$filename,"
           done
-          echo "uploaded_files=$UPLOADED_FILES" >> $GITHUB_OUTPUT
+          echo "filelist=$( echo "$UPLOADED_FILES" )" >> $GITHUB_OUTPUT
 
   create-o3de-3p-pr:
     name: Create PR in O3DE to update version
@@ -56,7 +56,7 @@ jobs:
     env:
       O3DE_REPO_PATH: o3de
       DEV_CDN: https://d1gg6ket0m44ly.cloudfront.net
-      UPLOADED_FILES: "${{ needs.deploy-dev.outputs.uploaded_files }}"
+      UPLOADED_FILES: "${{ needs.deploy-dev.outputs.filelist }}"
 
     steps:
     - name: Checkout o3de repository
@@ -133,7 +133,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     env:
-      UPLOADED_FILES: "${{ needs.deploy-dev.outputs.uploaded_files }}"
+      UPLOADED_FILES: "${{ needs.deploy-dev.outputs.filelist }}"
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
